# pyhelics

./: .envrc  .gitignore  404.html  CMakeLists.txt  MANIFEST.in  README.md  helics_version.cmake  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-cli-extras.yml  cd.yml  ci-cli-extras.yml  ci-cli.yml  ci-web.yml  ci.yml  docs.yml  pythonpackage.yml  update-helics.yml
api/: index.html
api/bin-py/: index.html
api/capi-py/: index.html
api/cli-py/: index.html
api/database-py/: index.html
api/flaskr/: index.html
api/helics-broker-cli-py/: index.html
api/helics_build-py/: index.html
api/observer-py/: index.html
api/profile-py/: index.html
api/status_checker-py/: index.html
api/utils-py/: index.html
api/vcredist-py/: index.html
callbacks/: index.html
cli-interface/: index.html
client/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
client/src/: app.css  app.html
client/src/lib/: BrokerLayout.svelte  DataFlowGraph.svelte  Navbar.svelte  ProfilePlot.svelte  Topology.svelte  index.ts  stores.ts
client/src/routes/: +layout.svelte  +page.svelte  __layout.svelte  broker.svelte  index.svelte  profile.svelte  run.svelte  topology.svelte
client/src/routes/broker/: +page.svelte
client/src/routes/observe/: +page.svelte
client/src/routes/profile/: +page.svelte
client/src/routes/run/: +page.svelte
docs/: CNAME  api.md  callbacks.md  cli-interface.md  installation.md  migration-helics2-helics3.md  pythonic-interface.md  usage.md  web-interface.md
docs/api/: index.md
docs/examples/10-federates-1-topic/: pireceiver.py
docs/examples/2-federates-1-topic/: README.md  old-pisender.py
docs/examples/2-federates-3-topics/: README.md  profile.txt  runner.json
docs/examples/20-federates-10-topics/: README.md  profile.txt  runner.json  saved-profile.txt
docs/examples/website_pythonic_interface/: pythonic_interface.py
docs/examples/website_usage/: broker.py  federate_1.py  federate_2.py  runner.json
examples/: pireciever.py  pisender.py
examples/10-federates-1-topic/: pisender.py  runner.json
examples/2-federates-1-topic/: index.html  pireceiver.py  pisender.py
examples/2-federates-3-topics/: index.html  pireceiver.py  pisender.py  runner.json
examples/20-federates-10-topics/: index.html  pireceiver.py  pisender.py
helics/: __init__.py  _build.py  _version.py  bin.py  broker.py  capi.py  cli.py  core.py  database.py  federate.py  helics-broker-cli.py  helics_build.py  observer.py  status_checker.py  utils.py  vcredist.py
helics/flaskr/: __init__.py
helics_cli_extras/: .gitignore  pyproject.toml
helics_cli_extras/client/: README.md  package-lock.json  tailwind.config.cjs
helics_cli_extras/client/src/lib/: BrokerLayout.svelte  Switch.svelte  Table.svelte
helics_cli_extras/client/src/routes/: broker.svelte  observe.svelte  profile.svelte  run.svelte
helics_cli_extras/helics_cli_extras/: __init__.py  database.py  flask_app.py  observer.py
helics_web/: pyproject.toml
helics_web/client/src/lib/: Navbar.svelte
helics_web/client/src/routes/: index.svelte
helics_web/helics_web/: __init__.py
installation/: index.html
interface/: index.html
migration-helics2-helics3/: index.html
pythonic-interface/: index.html
scripts/: cleanup_bdist.py  download-ziptools.py
search/: search_index.json
tests/: combinationfederate.json  conftest.py  filters.json  pireceiver.py  pisender.py  test_api.py  test_app_connector.py  test_badinputs.py  test_combinationfederate.py  test_filters.py  test_helicsapp.py  test_init.py  test_iteration.py  test_messagefederate.py  test_messagefilter.py  test_pyhelics.py  test_python_api.py  test_query.py  test_systemtests.py  test_valuefederate.py  utils.py  valuefederate.json
tests/test_files/: helicsapp_test_example6.json
usage/: index.html
web-interface/: index.html
